add validation part 1

--- a/src/components/infoBlock/infoBlock.scss
+++ b/src/components/infoBlock/infoBlock.scss
@@ -8,9 +8,16 @@
   justify-content: space-between;
 
   svg {
-    &:hover {
-      fill: red;
-      cursor: pointer;
+    cursor: pointer;
+    &.delete {
+      &:hover {
+        fill: red;
+      }
+    }
+    &.edit {
+      &:hover {
+        fill: blue;
+      }
     }
   }
 
