added validation only engl char for suffix

--- a/src/components/infoBlock/infoBlock.scss
+++ b/src/components/infoBlock/infoBlock.scss
@@ -22,9 +22,10 @@
   }
 
   .info-block-addNew {
-    align-items: flex-end;
+    // align-items: flex-end;
 
     .button {
+      margin-top: 22px;
       height: 38px;
     }
   }
