--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,7 +1,7 @@
 @import "../../styles.scss";
 
 .modal {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   display: flex;
