added api check url and created popup wrapper for popup componentnd and updated popup component - removed all logic

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -10,4 +10,11 @@
   &:active {
     background-color: green;
   }
+
+  &.disabled {
+    background-color: #e0e0e0;
+    color: #585858;
+    border: none;
+    cursor: not-allowed;
+  }
 }
