--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,67 @@
     transform: rotate(360deg);
   }
 }
+
+.app-content {
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  min-width: 800px;
+}
+
+.App {
+  display: flex;
+  /* gap: 30px; */
+  width: 100%;
+  height: 100%;
+  /* padding: 10px 20px; */
+  /* justify-content: space-between; */
+}
+
+#main {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+  /* width: 1200px; */
+}
+
+.invalid-info {
+  display: flex;
+  flex-wrap: wrap;
+  color: red;
+  font-size: 11px;
+}
+
+.app-navigation {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  min-width: 200px;
+  height: 100%;
+  gap: 15px;
+  padding: 10px 20px;
+  background-color: #f1f1f1;
+}
+
+.app__nav-link:link {
+  /* color: #fff; */
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  text-decoration: none;
+}
+.app__nav-link:visited {
+  /* color: #fff; */
+}
+.app__nav-link:hover {
+  color: yellow;
+}
+.app__nav-link:active {
+  color: teal;
+}
+
+.activeRoute {
+  background-color: yellow;
+  border-bottom: 0.4rem solid teal;
+  cursor: not-allowed;
+}
