--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,16 @@
 }
 
 .app-content {
-  width: 1200px;
+  min-width: 900px;
+  max-width: 1200px;
+  width: 100%;
   display: flex;
   justify-content: center;
-  min-width: 800px;
 }
 
 .App {
   display: flex;
-  /* gap: 30px; */
+  gap: 30px;
   width: 100%;
   height: 100%;
   /* padding: 10px 20px; */
