--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  display: flex;
+  gap: 30px;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -45,14 +49,7 @@
   justify-content: center;
 }
 
-.App {
-  display: flex;
-  gap: 30px;
-  width: 100%;
-  height: 100%;
-  /* padding: 10px 20px; */
-  /* justify-content: space-between; */
-}
+
 
 #main {
   display: flex;
@@ -76,28 +73,36 @@
   min-width: 200px;
   height: 100%;
   gap: 15px;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   background-color: #f1f1f1;
+  
+}
+.app__nav-link {
+  color: #585858;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3.8rem;
 }
 
 .app__nav-link:link {
-  /* color: #fff; */
-  font-size: 1.6rem;
-  line-height: 1.6rem;
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
   text-decoration: none;
 }
 .app__nav-link:visited {
   /* color: #fff; */
 }
 .app__nav-link:hover {
-  color: yellow;
+  color: #abaeb9;
 }
 .app__nav-link:active {
-  color: teal;
+  color: #fff;
 }
 
 .activeRoute {
-  background-color: yellow;
-  border-bottom: 0.4rem solid teal;
+  background-color: #979797;
+  /* border-bottom:  solid teal; */
   cursor: not-allowed;
 }
