--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   /* text-align: center; */
   display: flex;
+  flex-direction: column;
   gap: 30px;
   width: 100%;
   height: 100%;
@@ -43,13 +44,13 @@
 
 .app-content {
   min-width: 900px;
-  max-width: 1200px;
+  /* max-width: 1200px; */
+  padding: 0 20px;
+
   width: 100%;
   display: flex;
   justify-content: center;
 }
-
-
 
 #main {
   display: flex;
@@ -68,16 +69,17 @@
 
 .app-navigation {
   display: flex;
-  flex-direction: column;
-  width: 200px;
-  min-width: 200px;
-  height: 100%;
-  gap: 15px;
+  width: 100%;
+  /* flex-direction: column; */
+  /* width: 200px; */
+  /* min-width: 200px; */
+  /* height: 100%; */
   /* padding: 10px 20px; */
+  padding-left: 20px;
   background-color: #f1f1f1;
-  
 }
 .app__nav-link {
+  width: 200px;
   color: #585858;
   display: flex;
   align-items: center;
@@ -98,7 +100,6 @@
   color: #abaeb9;
 }
 .app__nav-link:active {
-  color: #fff;
 }
 
 .activeRoute {
