--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -16,6 +16,7 @@
   .details-table {
     display: flex;
     flex-direction: column;
+
     .row__cell {
       display: flex;
       height: fit-content;
@@ -127,6 +128,10 @@
         }
       }
       // justify-content: space-between;
+    }
+
+    .header__row-cell {
+      margin: 0;
     }
   }
 }
