--- a/src/pages/Events/events.scss
+++ b/src/pages/Events/events.scss
@@ -34,6 +34,7 @@
       justify-content: center;
       width: 100%;
       gap: 15px;
+      min-width: 415px;
 
       button {
         width: 120px;
@@ -44,6 +45,7 @@
   .events-table {
     display: flex;
     flex-direction: column;
+    min-width: 1615px;
 
     .events-table-header {
       display: flex;
@@ -57,6 +59,7 @@
         font-size: 1rem;
       }
     }
+
     .events-table-content {
     }
 
@@ -72,6 +75,8 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      min-width: 415px;
+      border-right: none;
     }
     .row__index {
       width: 40px;
