--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -4,6 +4,12 @@
   width: 100%;
   height: 90vh;
 
+  .details-header-group {
+    align-items: flex-end;
+    .button {
+      height: 38px;
+    }
+  }
   .details-header {
     & > p {
       font-weight: bold;
