fixed default Resource controller

--- a/src/pages/defaultResource/defaultResource.scss
+++ b/src/pages/defaultResource/defaultResource.scss
@@ -14,4 +14,8 @@
     box-sizing: border-box;
     box-shadow: 0px 0px 1.6px #949494;
   }
+  span {
+    font-weight: bold;
+    margin-right: 5px;
+  }
 }
