--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,10 @@
   /* min-width: 200px; */
   /* height: 100%; */
   /* padding: 10px 20px; */
+  position: sticky;
+  height: 60px;
+  top: 0;
+  box-shadow: 0px -3px 8px black;
   padding-left: 20px;
   background-color: #f1f1f1;
 }
