--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -20,6 +20,16 @@
     }
   }
 
+  &.deleted {
+    .details-header {
+      & > p {
+        span {
+          color: red;
+        }
+      }
+    }
+  }
+
   .details-table {
     display: flex;
     flex-direction: column;
@@ -49,7 +59,9 @@
       display: flex;
 
       & > img {
-        width: 100%;
+        // width: 100%;
+        width: 100px;
+        height: 100px;
       }
       .button {
         width: 100%;
@@ -61,6 +73,10 @@
       height: 50px;
       border-bottom: 1px solid black;
       gap: 30px;
+      position: sticky;
+      top: 60px;
+      background: white;
+      box-shadow: 0 5px 3px #00000021;
 
       .row__cell {
         height: 40px;
