--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -34,6 +34,18 @@
     display: flex;
     flex-direction: column;
 
+    .row-qr {
+      width: 100%;
+      height: 100%;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 15px 0;
+      gap: 20px;
+    }
+
     .row__cell {
       overflow: hidden;
       display: inline-block;
