--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -44,6 +44,10 @@
       justify-content: center;
       padding: 15px 0;
       gap: 20px;
+      max-width: 100%;
+      p {
+        font-size: 16px;
+      }
     }
 
     .row__cell {
@@ -69,9 +73,11 @@
       margin: 10px 0;
       border: none;
       display: flex;
+      align-items: center;
+      width: auto;
 
       .button {
-        width: 100%;
+        width: 250px;
       }
     }
     .details-table-header {
