--- a/src/App.css
+++ b/src/App.css
@@ -92,24 +92,24 @@
   /* height: 100%; */
   /* padding: 10px 20px; */
   height: 60px;
-  min-height: 60px;
+  /* min-height: px; */
   box-shadow: 0px -3px 8px black;
   /* padding-left: 20px; */
   background-color: #f1f1f1;
 }
 .app__nav-link {
-  width: 200px;
+  width: 170px;
   color: #585858;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 3.8rem;
+  /* height: 3.8rem; */
 }
 
 .app__nav-link:link {
   text-align: center;
-  font-size: 1.2rem;
-  line-height: 1.4rem;
+  font-size: 1rem;
+  line-height: 1.2rem;
   text-decoration: none;
 }
 .app__nav-link:visited {
