--- a/src/pages/AboutUs/AboutUs.scss
+++ b/src/pages/AboutUs/AboutUs.scss
@@ -4,7 +4,7 @@
   width: 100%;
   flex-direction: column;
   padding: 0px 0 100px 0;
-
+  margin-top: 60px;
   font-size: 18px;
   line-height: 24px;
 
