--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,7 @@
   box-shadow: 0px -3px 8px black;
   /* padding-left: 20px; */
   background-color: #f1f1f1;
+  z-index: 100;
 }
 
 .app-navigation {
