--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 $light-green-v1: #01ab01;
 $light-green-v2: #04bf04;
+$light-blue-v1: #0066ff;
+$light-blue-v2: #0066ff;
+$light-yellow-v1: #e9eb4a;
+$light-yellow-v2: #e9eb4a;
+$light-red-v1: #ed1414;
+$light-red-v2: #ed1414;
 $light-gray-v1: #e8e8e8;
 $light-gray-v2: #fafafb;
 $light-gray-v3: #dcdbdb;
