--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@
   /* padding: 10px 20px; */
   position: fixed;
   height: 60px;
+  min-height: 60px;
   top: 0;
   box-shadow: 0px -3px 8px black;
   /* padding-left: 20px; */
