--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@
   /* height: 100%; */
   /* padding: 10px 20px; */
   height: 60px;
+  min-height: 60px;
   /* min-height: px; */
   box-shadow: 0px -3px 8px black;
   /* padding-left: 20px; */
