--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@
   /* height: 100%; */
   /* padding: 10px 20px; */
   height: 60px;
-  /* min-height: px; */
+  min-height: 60px;
   box-shadow: 0px -3px 8px black;
   /* padding-left: 20px; */
   background-color: #f1f1f1;
