--- a/src/pages/MainPage/mainPage.scss
+++ b/src/pages/MainPage/mainPage.scss
@@ -1,5 +1,24 @@
 .main-page {
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 0px 10px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  margin-top: -100px;
+  max-width: 700px;
   h2 {
     margin: 0px;
+  }
+  .input,
+  .button {
+    font-size: 19px;
+    input {
+      height: 100%;
+      font-size: 19px;
+    }
+    height: 50px;
+    width: 100%;
   }
 }
