--- a/src/components/infoBlock/infoBlock.scss
+++ b/src/components/infoBlock/infoBlock.scss
@@ -33,7 +33,7 @@
   .info-block-content {
     width: 950px;
     .info-block__number {
-      width: 50px;
+      width: 70px;
     }
     .info-block__url {
       width: 400px;
@@ -42,13 +42,17 @@
       white-space: nowrap;
     }
 
+    .info-block__count {
+      width: 180px;
+    }
     .info-block-content-title {
       display: flex;
       margin-bottom: 15px;
 
       .info-block__number,
       .info-block__url,
-      .info-block__count {
+      .info-block__count,
+      .info-block__name {
         font-weight: bold;
       }
     }
