--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
   gap: 30px;
   width: 100%;
-  height: 100%;
-  padding-bottom: 300px;
+  min-height: 100%;
+  height: fit-content;
+  padding: 0 20px;
+  padding-bottom: 100px;
 }
 
 .App-logo {
@@ -55,9 +56,9 @@
 
 #main {
   display: flex;
-  height: 100%;
   justify-content: center;
   width: 100%;
+  height: fit-content;
   /* width: 1200px; */
 }
 
