--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 90vh;
+  // height: 90vh;
+  height: 100%;
 
   .details-header-group {
     align-items: flex-end;
