--- a/src/components/infoBlock/infoBlock.scss
+++ b/src/components/infoBlock/infoBlock.scss
@@ -60,7 +60,7 @@
         font-weight: bold;
       }
     }
-    .info-block_additional_text {
+    .info-block_msg {
       align-items: flex-end;
     }
     .info-block__sources {
